--- a/templates/base.html
+++ b/templates/base.html
@@ -7,25 +7,34 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
     <style>
         body {
-            padding-top: 70px;
+            padding-top: 70px; /* leave space for fixed navbar */
         }
-        .navbar-brand {
-            font-weight: bold;
+        .navbar-brand img {
+            /* Adjust size of the logo as needed */
+            width: 30px;
+            height: 30px;
+            margin-right: 8px;
         }
     </style>
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container-fluid">
-        <a class="navbar-brand" href="{{ url_for('home') }}">Timesheet Portal</a>
+        <a class="navbar-brand d-flex align-items-center" href="{{ url_for('home') }}">
+            <!-- Logo icon -->
+            <img src="{{ url_for('static', filename='logo.png') }}" alt="Logo">
+            <!-- Portal title -->
+            Timesheet Portal
+        </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent">
             <span class="navbar-toggler-icon"></span>
         </button>
+
         <div class="collapse navbar-collapse justify-content-end" id="navbarContent">
             <ul class="navbar-nav mb-2 mb-lg-0">
                 {% if current_user.is_authenticated %}
                     <li class="nav-item">
-                        <a class="nav-link disabled">Logged in as {{ current_user.username }}</a>
+                        <span class="nav-link text-light">Logged in as {{ current_user.username }}</span>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
